# CMS

./: .gitignore  README.md  manage.py  pyproject.toml  word_cloud.txt
.env/: .local
CMS/: urls.py  wsgi.py
deploy/conf/nginx/: nginx.conf
deploy/conf/nginx/conf.d/: cms.conf
deploy/conf/supervisor/: cms_nginx.conf  cms_uwsgi.conf  supervisord.conf
deploy/conf/supervisor/supervisord.d/: cms_uwsgi.conf
deploy/conf/uwsgi/: uwsgi.ini
position/: admin.py  models.py  urls.py
position/migrations/: 0001_initial.py  0002_auto_20201111_1027.py  0003_auto_20201111_1027.py
settings/: celery_app.py  dev_settings.py  pro_settings.py
tools/: urls.py  views.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_auto_20201022_2352.py  0003_auto_20201024_2052.py  0004_user_is_staff.py  0005_a_b.py  0005_menu_menupermission.py
utils/: __init__.py  data_export.py  database_router.py  hashtools.py  log_filter.py  middleware.py  model.py  practice.py  word_cloud.py
utils/management/commands/: startapp.py
