[tool.poetry]
name = "CMS"
version = "0.1.0"
description = ""
authors = ["wangdong"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
djangorestframework = "^3.12.1"
mysqlclient = "^2.0.1"
celery = "^5.0.1"
django-environ = "^0.4.5"
supervisor = "^4.2.1"
uwsgi = "^2.0.19"
httpx = "^0.16.1"
xlwt = "^1.3.0"
openpyxl = "^3.0.5"
reportlab = "^3.5.55"
django-guardian = "^2.3.0"
django-python3-ldap = "^0.11.3"
djangorestframework-simplejwt = "^4.5.0"
django-cid = "^2.1"
django-haystack = "^3.0"
numpy = "^1.19.4"
jieba = "^0.42.1"
matplotlib = "^3.3.3"
wordcloud = "^1.8.1"
imageio = "^2.9.0"
snownlp = "^0.12.3"
django-allauth = "^0.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
